add burgers + adaptive for tablets

--- a/index.html
+++ b/index.html
@@ -114,14 +114,63 @@
 			</div>
 		</section>
 		<section class="section burgers">
-			<div class="left-block">
-				<a href="#" class="arrow-left"></a>
-			</div>
-			<div class="slider-block">
-				
-			</div>
-			<div class="right-block">
-				<a href="#" class="arrow-right"></a>
+			<div class="container container--burgers">
+				<div class="left-block">
+					<a href="#" class="arrow-left">
+						<svg class="arrow-left__pic" width="29" height="14">
+							<use xlink:href="img/icons/mysprite.svg#arrow-scroll"></use>
+						</svg>
+					</a>
+				</div>
+				<div class="slider">
+					<ul class="slider__list">
+						<li class="slider__item">
+							<div class="ingredients">
+								<div class="ingredients__pic-wrap">
+									<svg class="ingredients__pic" width="46" height="46">
+										<use xlink:href="img/icons/mysprite.svg#burger"></use>
+									</svg>
+								</div>
+								<span class="ingredients__desc">состав</span>
+							</div>
+							<div class="kkal">
+								<div class="kkal__pic-wrap">
+									<svg class="kkal__pic" width="60" height="60">
+										<text class="kkal__pic-text" x="13" y="50">1200</text>
+										<use xlink:href="img/icons/mysprite.svg#kkal"></use>
+									</svg>
+								</div>
+								<span class="kkal__desc">ккал</span>
+							</div>
+							<div class="slider__pic-wrap">
+								<img src="img/burgers_section/black-burger.png" alt="Black burger" class="slider__pic">
+							</div>
+							<div class="slider__desc">
+								<h2 class="title slider__title">Dark BEEF Burger</h2>
+								<p class="slider__text">Ваш старый добрый знакомый, 
+									с рубленым бифштексом из 100% говядины, тремя 
+									кусочками нежнейшего сыра эмменталь, двумя помидорами, 
+									луком, салатом и соусом гриль теперь с добавлением 
+									экзотического соуса чураско.
+								</p>
+								<div class="slider__order">
+									<div class="price">
+										<span class="price__number">500</span>
+										рублей
+									</div>
+									<a href="#" class="order-btn">заказать</a>
+								</div>
+							</div>
+						</li>
+					</ul>
+				</div>
+				<div class="right-block">
+					<a href="#" class="arrow-right">
+						<svg class="arrow-right__pic" width="29" height="14">
+							<use xlink:href="img/icons/mysprite.svg#arrow-scroll"></use>
+						</svg>
+					</a>
+				</div>
 			</div>
 		</section>
 		<section class="section team" id="team">
