--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 					<a href="#" class="h-accordeon__trigger h-accordeon__trigger--meat">
 						<h3 class="h-accordeon__title">Для мясоедов</h3>
 					</a>
-					<div class="h-accordeon__content h-accordeon__content--active">
+					<div class="h-accordeon__content">
 						<div class="h-accordeon__content-text">
 							Речевой акт редуцирует диалектический характер. 
 							Развивая эту тему, заимствование редуцирует 
