--- a/index.html
+++ b/index.html
@@ -238,21 +238,7 @@
 					<div class="v-accordeon">
 						<ul class="v-accordeon__list">
 							<li class="v-accordeon__item">
-								<h3 class="v-accordeon__name">Дэниэл Редклиф</h3>
-								<div class="v-accordeon__content">
-									<div class="pic-wrap">
-										<img src="img/team_section/crewman.jpg" alt="Аватар" class="content__img">
-									</div>
-									<div class="content__description">
-										<h4 class="content__title">Оператор</h4>
-										<div class="content__text">С радостью поможет подобрать
-											идеальный бургер и оформить заказ.
-										</div>
-									</div>
-								</div>
-							</li>
-							<li class="v-accordeon__item v-accordeon__item--active">
-								<h3 class="v-accordeon__name ">Ричард Джеймс</h3>
+								<a href="#" class="v-accordeon__name">Дэниэл Редклиф</a>
 								<div class="v-accordeon__content">
 									<div class="pic-wrap">
 										<img src="img/team_section/crewman.jpg" alt="Аватар" class="content__img">
@@ -266,7 +252,7 @@
 								</div>
 							</li>
 							<li class="v-accordeon__item">
-								<h3 class="v-accordeon__name ">Джейк Финн</h3>
+								<a href="#" class="v-accordeon__name ">Ричард Джеймс</a>
 								<div class="v-accordeon__content">
 									<div class="pic-wrap">
 										<img src="img/team_section/crewman.jpg" alt="Аватар" class="content__img">
@@ -280,7 +266,21 @@
 								</div>
 							</li>
 							<li class="v-accordeon__item">
-								<h3 class="v-accordeon__name">Николай Иванов</h3>
+								<a href="#" class="v-accordeon__name ">Джейк Финн</a>
+								<div class="v-accordeon__content">
+									<div class="pic-wrap">
+										<img src="img/team_section/crewman.jpg" alt="Аватар" class="content__img">
+									</div>
+									<div class="content__description">
+										<h4 class="content__title">Оператор</h4>
+										<div class="content__text">С радостью поможет подобрать
+											идеальный бургер и оформить заказ.
+										</div>
+									</div>
+								</div>
+							</li>
+							<li class="v-accordeon__item">
+								<a href="#" class="v-accordeon__name">Николай Иванов</a>
 								<div class="v-accordeon__content">
 									<div class="pic-wrap">
 										<img src="img/team_section/crewman.jpg" alt="Аватар" class="content__img">
