--- a/index.html
+++ b/index.html
@@ -372,120 +372,131 @@
 		<section class="section feedback" id="feedback">
 			<ul class="feedback__list">
 				<li class="feedback__item" style="background-image: url(img/feedback_section/photo-1438763298591-75a0d42b7265.png)">
-					<div class="feedback__content">
-						<h3 class="feedback__subtitle">Константин Спилберг</h3>
-						<div class="feedback__text">
-							Мысли все о них и о них, 
-							о них и о них. Нельзя устоять, 
-							невозможно забыть... Никогда не думал, 
-							что булочки могут быть такими мягкими, 
-							котлетка такой сочной, а сыр таким 
-							расплавленным.
+					<div class="feedback__container">
+						<div class="feedback__content">
+							<h3 class="feedback__subtitle">Константин Спилберг</h3>
+							<div class="feedback__text">
+								Мысли все о них и о них, 
+								о них и о них. Нельзя устоять, 
+								невозможно забыть... Никогда не думал, 
+								что булочки могут быть такими мягкими, 
+								котлетка такой сочной, а сыр таким 
+								расплавленным.
+							</div>
 						</div>
 						<a href="#" class="feedback__btn">подробнее</a>
 						<a href="#" class="feedback__btn feedback__btn--mobile">читать отзыв</a>
 					</div>
 				</li>
 				<li class="feedback__item" style="background-image: url(img/feedback_section/photo-1440606797942-6cc04c045447.png)">
-					<div class="feedback__content">
-						<h3 class="feedback__subtitle">Константин Спилберг</h3>
-						<div class="feedback__text">
-							Мысли все о них и о них, 
-							о них и о них. Нельзя устоять, 
-							невозможно забыть... Никогда не думал, 
-							что булочки могут быть такими мягкими, 
-							котлетка такой сочной, а сыр таким 
-							расплавленным.
+					<div class="feedback__container">
+						<div class="feedback__content">
+							<h3 class="feedback__subtitle">Константин Спилберг</h3>
+							<div class="feedback__text">
+								Мысли все о них и о них, 
+								о них и о них. Нельзя устоять, 
+								невозможно забыть... Никогда не думал, 
+								что булочки могут быть такими мягкими, 
+								котлетка такой сочной, а сыр таким 
+								расплавленным.
+							</div>
 						</div>
 						<a href="#" class="feedback__btn">подробнее</a>
 						<a href="#" class="feedback__btn feedback__btn--mobile">читать отзыв</a>
 					</div>
 				</li>
 				<li class="feedback__item" style="background-image: url(img/feedback_section/photo-1445404590072-16ef9c18bd83.png)">
-					<div class="feedback__content">
-						<h3 class="feedback__subtitle">Константин Спилберг</h3>
-						<div class="feedback__text">
-							Мысли все о них и о них, 
-							о них и о них. Нельзя устоять, 
-							невозможно забыть... Никогда не думал, 
-							что булочки могут быть такими мягкими, 
-							котлетка такой сочной, а сыр таким 
-							расплавленным.
+					<div class="feedback__container">
+						<div class="feedback__content">
+							<h3 class="feedback__subtitle">Константин Спилберг</h3>
+							<div class="feedback__text">
+								Мысли все о них и о них, 
+								о них и о них. Нельзя устоять, 
+								невозможно забыть... Никогда не думал, 
+								что булочки могут быть такими мягкими, 
+								котлетка такой сочной, а сыр таким 
+								расплавленным.
+							</div>
 						</div>
 						<a href="#" class="feedback__btn">подробнее</a>
 						<a href="#" class="feedback__btn feedback__btn--mobile">читать отзыв</a>
 					</div>
 				</li>
 				<li class="feedback__item" style="background-image: url(img/feedback_section/photo-1457706924510-773f3c796de3.png)">
-					<div class="feedback__content">
-						<h3 class="feedback__subtitle">Константин Спилберг</h3>
-						<div class="feedback__text">
-							Мысли все о них и о них, 
-							о них и о них. Нельзя устоять, 
-							невозможно забыть... Никогда не думал, 
-							что булочки могут быть такими мягкими, 
-							котлетка такой сочной, а сыр таким 
-							расплавленным.
+					<div class="feedback__container">
+						<div class="feedback__content">
+							<h3 class="feedback__subtitle">Константин Спилберг</h3>
+							<div class="feedback__text">
+								Мысли все о них и о них, 
+								о них и о них. Нельзя устоять, 
+								невозможно забыть... Никогда не думал, 
+								что булочки могут быть такими мягкими, 
+								котлетка такой сочной, а сыр таким 
+								расплавленным.
+							</div>
 						</div>
-						<a class="feedback__btn">подробнее</a>
-						<a class="feedback__btn feedback__btn--mobile">читать отзыв</a>
+						<a href="#" class="feedback__btn">подробнее</a>
+						<a href="#" class="feedback__btn feedback__btn--mobile">читать отзыв</a>
 					</div>
 				</li>
 				<li class="feedback__item" style="background-image: url(img/feedback_section/photo-1458696765561-12142eaead13.png)">
-					<div class="feedback__content">
-						<h3 class="feedback__subtitle">Константин Спилберг</h3>
-						<div class="feedback__text">
-							Мысли все о них и о них, 
-							о них и о них. Нельзя устоять, 
-							невозможно забыть... Никогда не думал, 
-							что булочки могут быть такими мягкими, 
-							котлетка такой сочной, а сыр таким 
-							расплавленным.
+					<div class="feedback__container">
+						<div class="feedback__content">
+							<h3 class="feedback__subtitle">Константин Спилберг</h3>
+							<div class="feedback__text">
+								Мысли все о них и о них, 
+								о них и о них. Нельзя устоять, 
+								невозможно забыть... Никогда не думал, 
+								что булочки могут быть такими мягкими, 
+								котлетка такой сочной, а сыр таким 
+								расплавленным.
+							</div>
 						</div>
 						<a href="#" class="feedback__btn">подробнее</a>
 						<a href="#" class="feedback__btn feedback__btn--mobile">читать отзыв</a>
 					</div>
 				</li>
 				<li class="feedback__item" style="background-image: url(img/feedback_section/photo-1458890715264-db84f7c6ef13.png)">
-					<div class="feedback__content">
-						<h3 class="feedback__subtitle">Константин Спилберг</h3>
-						<div class="feedback__text">
-							Мысли все о них и о них, 
-							о них и о них. Нельзя устоять, 
-							невозможно забыть... Никогда не думал, 
-							что булочки могут быть такими мягкими, 
-							котлетка такой сочной, а сыр таким 
-							расплавленным.
+					<div class="feedback__container">
+						<div class="feedback__content">
+							<h3 class="feedback__subtitle">Константин Спилберг</h3>
+							<div class="feedback__text">
+								Мысли все о них и о них, 
+								о них и о них. Нельзя устоять, 
+								невозможно забыть... Никогда не думал, 
+								что булочки могут быть такими мягкими, 
+								котлетка такой сочной, а сыр таким 
+								расплавленным.
+							</div>
 						</div>
 						<a href="#" class="feedback__btn">подробнее</a>
 						<a href="#" class="feedback__btn feedback__btn--mobile">читать отзыв</a>
 					</div>
 				</li>
 				<li class="feedback__item" style="background-image: url(img/feedback_section/photo-1461332682233-b818af4c3a6e.png)">
-					<div class="feedback__content">
-						<h3 class="feedback__subtitle">Константин Спилберг</h3>
-						<div class="feedback__text">
-							Мысли все о них и о них, 
-							о них и о них. Нельзя устоять, 
-							невозможно забыть... Никогда не думал, 
-							что булочки могут быть такими мягкими, 
-							котлетка такой сочной, а сыр таким 
-							расплавленным.
+					<div class="feedback__container">
+						<div class="feedback__content">
+							<h3 class="feedback__subtitle">Константин Спилберг</h3>
+							<div class="feedback__text">
+								Мысли все о них и о них, 
+								о них и о них. Нельзя устоять, 
+								невозможно забыть... Никогда не думал, 
+								что булочки могут быть такими мягкими, 
+								котлетка такой сочной, а сыр таким 
+								расплавленным.
+							</div>
 						</div>
 						<a href="#" class="feedback__btn">подробнее</a>
 						<a href="#" class="feedback__btn feedback__btn--mobile">читать отзыв</a>
 					</div>
 				</li>
 				<li class="feedback__item" style="background-image: url(img/feedback_section/photo-1468546818829-25bb337b6646.png)">
-					<div class="feedback__content">
-						<h3 class="feedback__subtitle">Константин Спилберг</h3>
-						<div class="feedback__text">
-							Мысли все о них и о них, 
-							о них и о них. Нельзя устоять, 
-							невозможно забыть... Никогда не думал, 
-							что булочки могут быть такими мягкими, 
-							котлетка такой сочной, а сыр таким 
-							расплавленным.
+					<div class="feedback__container">
+						<div class="feedback__content">
+							<h3 class="feedback__subtitle">Вася Пупкин</h3>
+							<div class="feedback__text">
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident ducimus, ut eaque voluptatibus quas, architecto, excepturi ratione consequatur eos vel aut eligendi dicta dolorum similique sint beatae deserunt! Cupiditate, doloremque!
+							</div>
 						</div>
 						<a href="#" class="feedback__btn">подробнее</a>
 						<a href="#" class="feedback__btn feedback__btn--mobile">читать отзыв</a>
@@ -673,6 +684,17 @@
 			</ul>
 		</nav>
 	</div>
+	<script type="overlay" id="overlayTemplate">
+		<div class="overlay">
+			<div class="overlay__content">
+				<h3 class="overlay__name"></h3>
+				<div class="overlay__text">
+					
+				</div>
+			</div>
+			<a class="overlay__close"></a>
+		</div>
+	</script>
 	<script src="js/index.js"></script>
 </body>
 </html>
