--- a/index.html
+++ b/index.html
@@ -707,6 +707,7 @@
 							диссонансный анжамбеман. Наш современник стал 
 							особенно чутко относиться к слову.
 						</div>
+						<a class="close-menu"></a>
 					</div>
 				</li>
 				<li class="h-accordeon__item">
@@ -729,6 +730,7 @@
 							диссонансный анжамбеман. Наш современник стал 
 							особенно чутко относиться к слову.
 						</div>
+						<a class="close-menu"></a>
 					</div>
 				</li>
 				<li class="h-accordeon__item">
@@ -751,6 +753,7 @@
 							диссонансный анжамбеман. Наш современник стал 
 							особенно чутко относиться к слову.
 						</div>
+						<a class="close-menu"></a>
 					</div>
 				</li>
 			</ul>
@@ -1060,9 +1063,7 @@
 		<div class="logo logo--hamburger-menu">
 			<a class="logo__link" id="logo__link" href="#hello-block"><img src="./img/hello_section/logo.svg" alt="Мистер Бургер" class="logo__img"></a>
 		</div>
-		<div class="close">
-
-		</div>
+		<a class="close"></a>
 		<nav class="nav">
 			<ul class="nav__list nav__list--hamburger-menu">
 				<li class="nav__item" id="nav__item"><a href="#best" class="nav__link">о нас</a></li>
