--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
 							</div>
 						</div>
 					</div>
-					<div class="forward-arrow">
+					<a class="forward-arrow">
 						<!-- <img src="./img/hello_section/arrow-scroll.svg" alt="" class="forward-arrow__pic"> -->
 						<svg class="forward-arrow__pic" width="29" height="14">
 							<use xlink:href="img/icons/mysprite.svg#arrow-scroll"></use>
 						</svg>
-					</div>
+					</a>
 				</div>
 			</section>
 			<section class="section best" id="best">
