--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 						<nav class="header__navigation">
 							<ul class="nav__list">
 								<li class="nav__item"><a href="#best" class="nav__link">о нас</a></li>
-								<li class="nav__item"><a href="#" class="nav__link">бургеры</a></li>
+								<li class="nav__item"><a href="#burgers" class="nav__link">бургеры</a></li>
 								<li class="nav__item"><a href="#team" class="nav__link">команда</a></li>
 								<li class="nav__item"><a href="#menu" class="nav__link">меню</a></li>
 								<li class="nav__item"><a href="#feedback" class="nav__link">отзывы</a></li>
