pagination change for scroll

--- a/index.html
+++ b/index.html
@@ -1163,7 +1163,7 @@
 	<aside class="pagination">
 		<ul class="pagination__list">
 			<li class="pagination__item">
-				<a href="#hello-block" class="pagination__link"></a>
+				<a href="#hello-block" class="pagination__link pagination__link--active"></a>
 			</li>
 			<li class="pagination__item">
 				<a href="#best" class="pagination__link"></a>
