--- a/index.html
+++ b/index.html
@@ -1171,6 +1171,7 @@
       </div>
     </div>
   </script>
+  <link>https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js</link>
   <script src="js/index.js"></script>
 </body>
 
