--- a/index.html
+++ b/index.html
@@ -875,10 +875,12 @@
           <li class="feedback__item" style="background-image: url(img/feedback_section/photo-1440606797942-6cc04c045447.png)">
             <div class="feedback__container">
               <div class="feedback__content">
-                <h3 class="feedback__subtitle">Константин Спилберг</h3>
+                <h3 class="feedback__subtitle">Артемий Лабутен</h3>
                 <div class="feedback__text">
-                  Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими
-                  мягкими, котлетка такой сочной, а сыр таким расплавленным.
+                  Невероятной вкусноты бургеры. Рекомендую обязательно попробовать. 
+                  Также вкусные суп из тыквы и суп из цветной капусты. Интересный интерьер, 
+                  несколько этажей, есть веранда. Детям дарят небольшие презенты (киндеры), 
+                  что очень внимательно с их стороны. Персонал очень хороший.
                 </div>
               </div>
               <a href="#" class="feedback__btn">подробнее</a>
@@ -888,10 +890,16 @@
           <li class="feedback__item" style="background-image: url(img/feedback_section/photo-1445404590072-16ef9c18bd83.png)">
             <div class="feedback__container">
               <div class="feedback__content">
-                <h3 class="feedback__subtitle">Константин Спилберг</h3>
+                <h3 class="feedback__subtitle">Августина</h3>
                 <div class="feedback__text">
-                  Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими
-                  мягкими, котлетка такой сочной, а сыр таким расплавленным.
+                  Потому что все начиналось за здравие, 
+                  а закончилось плохо. Мохито был вкусный и крепкий, как попросили. 
+                  А вот Разделить счет на двоих официанту оказалось оооочень сложно. 
+                  Он предложил нам "самостоятельно разделить счет на калькуляторе". 
+                  Официанты стараются, но под ночь сильно путают заказы, это понять 
+                  можно, но не хамство! Уважаемое руководство, обучите персонал ни 
+                  только мастерству подачи блюд, но и элементарному клиентскому сервису. 
+                  Заранее спасибо.
                 </div>
               </div>
               <a href="#" class="feedback__btn">подробнее</a>
@@ -901,10 +909,16 @@
           <li class="feedback__item" style="background-image: url(img/feedback_section/photo-1457706924510-773f3c796de3.png)">
             <div class="feedback__container">
               <div class="feedback__content">
-                <h3 class="feedback__subtitle">Константин Спилберг</h3>
+                <h3 class="feedback__subtitle">Мистер Крабс</h3>
                 <div class="feedback__text">
-                  Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими
-                  мягкими, котлетка такой сочной, а сыр таким расплавленным.
+                  Могу отнести это место к самым лучшим мясным барам по ряду 
+                  причин:<br>
+                  1 вкусно <br>
+                  2 в историческом центре Москвы<br> 
+                  3 адекватные порции и цены<br>
+                  4 обслуживание <br>
+                  5 не люблю фарш, а здесь есть потрясающие сэндвичи с мясными слайсами из говядины-пастрами! <br>
+                  Из минусов- нет полноценных салатов, сомнительный дизайн и неудобная планировка.
                 </div>
               </div>
               <a href="#feedback" class="feedback__btn">подробнее</a>
@@ -914,10 +928,12 @@
           <li class="feedback__item" style="background-image: url(img/feedback_section/photo-1458696765561-12142eaead13.png)">
             <div class="feedback__container">
               <div class="feedback__content">
-                <h3 class="feedback__subtitle">Константин Спилберг</h3>
+                <h3 class="feedback__subtitle">Андрей Лукас</h3>
                 <div class="feedback__text">
-                  Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими
-                  мягкими, котлетка такой сочной, а сыр таким расплавленным.
+                  Летом есть веранда, где приятно посидеть вечерком после работы. 
+                  В ресторане подают вкусные стейки (при входе справа на витрине 
+                  можно увидеть красивые говяжьи ножки))) ). Обслуживание не 
+                  навязчивое, ценник немаленький.
                 </div>
               </div>
               <a href="#feedback" class="feedback__btn">подробнее</a>
