--- a/dev/index.html
+++ b/dev/index.html
@@ -21,7 +21,7 @@
               </a>
             </div>
             <nav class="header__navigation">
-              <ul class="nav__list">
+              <ul class="nav__list nav__list--header">
                 <li class="nav__item">
                   <a href="#best" class="nav__link" data-scroll-to="1">о нас</a>
                 </li>
