--- a/dev/index.html
+++ b/dev/index.html
@@ -993,7 +993,7 @@
                   <div class="form__row">
                     <label class="form__block">
                       <div class="form__title">Имя</div>
-                      <input pattern="[A-Za-zА-Яа-яЁё]" required id="username" type="text" class="form__input" name="username">
+                      <input pattern="^[A-zА-яЁё]+$" required id="username" type="text" class="form__input" name="username">
                     </label>
                     <label class="form__block">
                       <div class="form__title">Телефон</div>
@@ -1017,7 +1017,7 @@
                     </label>
                     <label class="form__block">
                       <div class="form__title">Квартира</div>
-                      <input required id="appartment" type="text" class="form__input" name="appartment">
+                      <input id="appartment" type="text" class="form__input" name="appartment">
                     </label>
                     <label class="form__block">
                       <div class="form__title">Этаж</div>
