--- a/prod/index.html
+++ b/prod/index.html
@@ -20,7 +20,7 @@
                 <img src="./img/hello_section/logo.svg" alt="Мистер Бургер" class="logo__img">
               </a>
             </div>
-            <nav class="header__navigation">
+            <nav class="nav nav--header">
               <ul class="nav__list nav__list--header">
                 <li class="nav__item">
                   <a href="#best" class="nav__link" data-scroll-to="1">о нас</a>
@@ -56,7 +56,7 @@
                 <h2 class="title title--slogan">
                   Мы делаем
                 </h2>
-                <div class="slogan__text">
+                <div class="hello-block__slogan-text">
                   натуральные бургеры
                 </div>
               </div>
@@ -240,7 +240,7 @@
                     <img src="img/burgers_section/black-burger.png" alt="Black burger" class="slider__pic">
                   </div>
                   <div class="slider__desc">
-                    <h2 class="title slider__title">Dark BEEF Burger</h2>
+                    <h2 class="title title--slider">Dark BEEF Burger</h2>
                     <p class="slider__text">Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь,
                       двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.
                     </p>
@@ -358,7 +358,7 @@
                     <img src="img/burgers_section/burger_sandwich_PNG4124.png" alt="Black burger" class="slider__pic">
                   </div>
                   <div class="slider__desc">
-                    <h2 class="title slider__title">Sandwich</h2>
+                    <h2 class="title title--slider">Sandwich</h2>
                     <p class="slider__text">Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь,
                       двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.
                     </p>
@@ -476,7 +476,7 @@
                     <img src="img/burgers_section/Chiken burger.png" alt="Black burger" class="slider__pic">
                   </div>
                   <div class="slider__desc">
-                    <h2 class="title slider__title">Chicken Burger</h2>
+                    <h2 class="title title--slider">Chicken Burger</h2>
                     <p class="slider__text">Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь,
                       двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.
                     </p>
@@ -594,7 +594,7 @@
                     <img src="img/burgers_section/NYC-Diner-Bacon-Cheeseburger.png" alt="Black burger" class="slider__pic">
                   </div>
                   <div class="slider__desc">
-                    <h2 class="title slider__title">NYC Diner Bacon Cheeseburger</h2>
+                    <h2 class="title title--slider">NYC Diner Bacon Cheeseburger</h2>
                     <p class="slider__text">Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь,
                       двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.
                     </p>
@@ -712,7 +712,7 @@
                     <img src="img/burgers_section/Spicy_Shrimp_Burger.png" alt="Black burger" class="slider__pic">
                   </div>
                   <div class="slider__desc">
-                    <h2 class="title slider__title">Spicy Shrimp Burger</h2>
+                    <h2 class="title title--slider">Spicy Shrimp Burger</h2>
                     <p class="slider__text">Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь,
                       двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.
                     </p>
